securing-flink-ui-2a/k8s/1-flink-ui-basic-auth-ingress-with-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flink-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: flink-ui.<hostname>
      http:
        paths:
          - backend:
              service:
                name: nginx-service
                port:
                  number: 8443
            path: /
            pathType: Prefix
